k8s/database-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  Dominus-DB
  namespace: default
  labels:
    app:  Dominus-DB
spec:
  selector:
    matchLabels:
      app: Dominus-DB
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  Dominus-DB
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  dominus_db
        image:  mongo:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
       
        ports:
        - containerPort:  27017
          name:  db
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

      restartPolicy: OnFailure

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: default
spec:
  selector:
    app: Dominus-DB
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: db-port
    protocol: TCP
    port: 27017
    targetPort: 27017
