k8s/dominus-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dominus
  namespace: default
  labels:
    app: dominus
spec:
  selector:
    matchLabels:
      app: dominus
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dominus
    spec:
      containers:
        - name: dominus-cmp
          image: mbi8807/dominus:kubernetes # public repo only test
          args:
            - MODE=true
            - BANNER=false
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "wget -qO- --header=API_TOKEN $API_TOKEN http://localhost:8000/health"
            initialDelaySeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 60

          ports:
            - containerPort: 8000
              name: rest
            - containerPort: 5000
              name: grpc

          volumeMounts:
            - name: dominus-certs
              mountPath: /etc/dominus/certs
              readOnly: true
            - name: dominus-logs
              mountPath: /var/dominus/logs
              readOnly: true

      volumes:
        - name: dominus-certs
          persistentVolumeClaim:
            claimName: dominus-certs-pvc
        - name: dominus-logs
          persistentVolumeClaim:
            claimName: dominus-logs-pvc

      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: dominus
  namespace: default
spec:
  selector:
    app: dominus
  sessionAffinity: None
  type: ClusterIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: rest
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 5000
      targetPort: 5000
