k8s/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: default
spec:
  selector:
    app: ingress-network
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: gateway
    protocol: TCP
    port: 80
    targetPort: 80
