k8s/sidecar-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar
  namespace: default
  labels:
    app: sidecar
spec:
  selector:
    matchLabels:
      app: sidecar
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sidecar
    spec:
      containers:
        - name: sidecar-cmp
          image: nginx:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi

          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf 
              readOnly: true

      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: sidecar
  namespace: default
spec:
  selector:
    app: sidecar
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
