k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-network
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.dominus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
                  
    - host: api.dominus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dominus
                port:
                  number: 8000

    - host: grpc.dominus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dominus
                port:
                  number: 5000
  tls:
    - hosts:
        - grpc.dominus.com
      secretName: grpc-tls-secret
